--- a/index.html
+++ b/index.html
@@ -29,16 +29,33 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Motivation</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Analysis of nuclear genomes often involves combining genotyping information from various individuals or populations to compute summary statistics or exporting them to various file formats (EIGENSTRAT,PLINK, etc..). This is achieved by parsing of multiple genotyping files (ex: VCF) to combined sets which are later exported to various formats or are used to compute summary statistics. </p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>Research groups usually do this by coding custom scripts tailored to the task at hand. New group members often cannot reproduce the analyses that were performed and often code their own scripts from scratch. This leads to time being wasted and an overall lack of reproducibility.</p>
+
+<p>mistartools are a set or programs coded in C++ designed to extract allele counts from VCF files (or 23andme or the raw base count from BAM files) and store it as a compressed representations of allele counts: </p>
+
+<pre><code>
+#chr	coord	REF,ALT	IndividualA
+7	35190	G,N	2,0:0
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>The line above that "IndividualA" had two reference alleles (G) and since no alternative alleles were found, the alternative is an N. The first column is the chromosome name, the second the coordinate, the third the bases for the reference and alternative. We do not consider tri-allelic sites. The fourth column is the allele count for the individual in the following format :
+
+<pre><code>
+REF,ALT:CPG
+</code></pre>
+
+<p> Where REF is the reference allele count and the ALT is the alternative allele count. The CPG field is a flag for CpG (0 is no CpG, 1 otherwise). In the presence of an alternative allele, the following representations is used:</p>
+
+<pre><code>
+#chr	coord	REF,ALT	IndividualA
+7	517798	T,C	1,1:0
+</code></pre>
+
+<p>The line above says that IndividualA had one T and one C at that position hence a heterozygous site. </p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
