--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ REF,ALT:CPG
 4	72052	G,N	0,0:0	0,0:0	2,0:0
 </code></pre>
 
-<p>The header lines started with a # sign. The remaining lines contain the allele count for chromosome 4 for 8 sites. Three samples are present, the chimp allele, the chimp-human ancestor and an individual named "IndividualA". If multiple indivuals are combined, the allele count lines will appear as:</p>
+<p>The header lines started with a # sign. Each operation made on the files from creation to transformation leaves a "watermark" that allows users to know precisely which operation was done and which version of mistartools was used. The remaining lines contain the allele count for chromosome 4 for 8 sites. Three samples are present, the chimp allele, the chimp-human ancestor and an individual named "IndividualA". If multiple indivuals are combined, the allele count lines will appear as:</p>
 
 <pre><code>
 #chr	coord	REF,ALT	root	anc	IndividualA	IndividualB	IndividualC
@@ -117,7 +117,7 @@ Data can be transformed into mistartools internal format from
 <h3>Operations on data</h3>
 
 <p>
-Using the data in the internal format, here are examples of operations:
+Using the data in the internal format, here are examples of operations that can be performed:
 <ul>
 <li> unions or intersections
 <li> meld two populations as one
@@ -134,23 +134,32 @@ For instance, for obtaining sites where all individuals in specific population a
 <li> disable sharing of alleles with the ancestor using "mistarfilter znosharing"
 </ol>
 
-
 </p>
 
+<h3>Exporting data</h3>
+
+Data can be exported to the following formats:
+
+<ul>
+<li> treemix
+<li> PLINK
+<li> EIGENSTRAT
+<li> NEXUS
+<li> fasta
+</ul>
+
+<h3>Documentation</h3>
+
+Please refer to the documentation manual available <a href="https://github.com/grenaud/mistartools/blob/master/doc/reference.pdf?raw=true">here</a>.
 
 
+<h3>Contact</h3>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+Contact <a href="https://github.com/grenaud/" class="user-mention">Gabriel Renaud</a>:
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<img src="http://grenaud.github.io/myaddr.png"></img>	 
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
 
     
   </body>
