--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Please refer to the documentation manual available <a href="https://github.com/g
 
 <h3>Contact</h3>
 
-Contact <a href="https://github.com/grenaud/" class="user-mention">Gabriel Renaud</a>:
+Contact <a href="https://github.com/grenaud/" class="user-mention">Gabriel Renaud</a>: <BR><BR>
 
 <img src="http://grenaud.github.io/myaddr.png"></img>	 
 
