--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ Data can be exported to the following formats:
 
 Please refer to the documentation manual available <a href="https://github.com/grenaud/mistartools/blob/master/doc/reference.pdf?raw=true">here</a>.
 
-
-<h3>Contact</h3>
+<BR>
+<h3>Questions ? Feature requests ?</h3>
 
 Contact <a href="https://github.com/grenaud/" class="user-mention">Gabriel Renaud</a>: <BR><BR>
 
