--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@ Please refer to the documentation manual available <a href="https://github.com/g
 <BR>
 <BR>
 
+<h3>Citing</h3>
+
+mistartools is not a tool published in a peer-reviewed journal, simply put a link to our github page please. <BR><BR>
 
 <h3>Questions ? Feature requests ?</h3>
 
