--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ mistartools is not a tool published in a peer-reviewed journal, simply put a lin
 <h3>Questions ? Feature requests ?</h3>
 
 <p>
-Contact <a href="https://github.com/grenaud/" class="user-mention">Gabriel Renaud</a>: <BR><BR>
+Contact  <a href="https://grenaud.github.io/">Gabriel Renaud</a> (<a href="https://github.com/grenaud" class="user-mention">@grenaud</a>) : <BR><BR>
 
 <img src="http://grenaud.github.io/myaddr.png"></img>	 
 </p>
